fix: form not centered

--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,15 @@
 
 /* Global Layout */
 
+html {
+    min-width: 100dvw;
+    min-height: 100dvh;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     display: flex;
     box-sizing: border-box;
@@ -66,6 +75,7 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
     background-color: var(--background-color);
     min-height: 80dvh;
 }
@@ -114,7 +124,7 @@ main {
     justify-content: center;
 }
 
-input[type="submit"] {
+#loginForm input[type="submit"] {
     height: 50px;
     font-size: large;
     font-weight: bold;
@@ -123,17 +133,19 @@ input[type="submit"] {
     width: 50%;
     color: white;
     border-color: var(--accent-color);
+    margin-top: 40px;
 }
 
 #loginForm label {
     font-size: large;
     font-weight: bold;
-    margin-left: 28px;
+    margin: 15px 28px;
 }
 
 .logo {
-    margin-top: 40px;
-    margin-left: 500px;
+    position: fixed;
+    top: 30px;
+    left: 115px;
     width: 100%;
 }
 img {
